@@ -1211,128 +1211,6 @@ int describe_shop(const object *op) {
 
     return 1;
 }
-typedef struct shopinv {
-    char        *item_sort;
-    char        *item_real;
-    uint16      type;
-    uint32      nrof;
-} shopinv;
-
-/* There are a lot of extra casts in here just to suppress warnings - it
- * makes it look uglier than it really it.
- * The format of the strings we get is type:name.  So we first want to
- * sort by type (numerical) - if the same type, then sort by name.
- */
-static int shop_sort(const void *a1, const void *a2)
-{
-    const shopinv *s1 = (const shopinv*)a1, *s2= (const shopinv*)a2;
-
-    if (s1->type<s2->type) return -1;
-    if (s1->type>s2->type) return 1;
-    /* the type is the same (what atoi gets), so do a strcasecmp to sort
-     * via alphabetical order
-     */
-    return strcasecmp(s1->item_sort, s2->item_sort);
-}
-
-static void add_shop_item(object *tmp, shopinv *items, int *numitems, int *numallocated)
-{
-    /* clear unpaid flag so that doesn't come up in query
-     * string.  We clear nrof so that we can better sort
-     * the object names.
-     */
-    char name[MAX_BUF];
-
-    CLEAR_FLAG(tmp, FLAG_UNPAID);
-    items[*numitems].nrof=tmp->nrof;
-    /* Non mergable items have nrof of 0, but count them as one
-     * so the display is properly.
-     */
-    if (tmp->nrof == 0) items[*numitems].nrof++;
-    items[*numitems].type=tmp->type;
-    query_base_name(tmp, 0, name, MAX_BUF);
-    items[*numitems].item_sort = strdup_local(name);
-    query_base_name(tmp, 1, name, MAX_BUF);
-    items[*numitems].item_real = strdup_local(name);
-    (*numitems)++;
-
-    SET_FLAG(tmp, FLAG_UNPAID);
-}
-
-void shop_listing(object *op)
-{
-    int i,j,numitems=0,numallocated=0, nx, ny;
-    char *map_mark = (char *) calloc(MAGIC_MAP_SIZE * MAGIC_MAP_SIZE,1);
-    object      *stack;
-    shopinv     *items;
-
-    /* Should never happen, but just in case a monster does apply a sign */
-    if (op->type!=PLAYER) return;
-
-    draw_ext_info(NDI_UNIQUE, 0, op, MSG_TYPE_SHOP, MSG_TYPE_SHOP_LISTING, 
-                  "\nThe shop contains:", NULL);
-
-    magic_mapping_mark(op, map_mark, 3);
-    items=malloc(40*sizeof(shopinv));
-    numallocated=40;
-
-    /* Find all the appropriate items */
-    for (i=0; i<MAP_WIDTH(op->map); i++) {
-        for (j=0; j<MAP_HEIGHT(op->map); j++) {
-            /* magic map code now centers the map on the object
-             * at MAGIC_MAP_HALF.
-             */
-            nx = i - op->x + MAGIC_MAP_HALF;
-            ny = j - op->y + MAGIC_MAP_HALF;
-            /* unlikely, but really big shops could run into this issue */
-            if (nx < 0 || ny < 0 || nx > MAGIC_MAP_SIZE
-                || ny > MAGIC_MAP_SIZE) continue;
-
-            if (map_mark[nx + MAGIC_MAP_SIZE * ny] & FACE_FLOOR) {
-                stack  =get_map_ob(op->map,i,j);
-
-                while (stack) {
-                    if (QUERY_FLAG(stack, FLAG_UNPAID)) {
-                        if (numitems==numallocated) {
-                            items=realloc(items,
-                                          sizeof(shopinv)*(numallocated+10));
-                            numallocated+=10;
-                        }
-                        add_shop_item(stack, items, &numitems, &numallocated);
-                    }
-                    stack = stack->above;
-                }
-            }
-        }
-    }
-    free(map_mark);
-    if (numitems == 0) {
-        draw_ext_info(NDI_UNIQUE, 0, op, MSG_TYPE_SHOP, MSG_TYPE_SHOP_LISTING, 
-                      "The shop is currently empty.\n", NULL);
-        free(items);
-        return;
-    }
-    qsort(items, numitems, sizeof(shopinv),
-          (int (*)(const void*, const void*))shop_sort);
-
-    for (i=0; i<numitems; i++) {
-        /* Collapse items of the same name together */
-        if ((i+1)<numitems && !strcmp(items[i].item_real, items[i+1].item_real)) {
-            items[i+1].nrof += items[i].nrof;
-            free(items[i].item_sort);
-            free(items[i].item_real);
-        } else {
-            draw_ext_info_format(NDI_UNIQUE, 0, op,
-                                 MSG_TYPE_SHOP, MSG_TYPE_SHOP_LISTING, 
-                                 "%d %s", "%d %s", 
-                                 items[i].nrof? items[i].nrof:1,
-                                 items[i].nrof==1?items[i].item_sort: items[i].item_real);
-            free(items[i].item_sort);
-            free(items[i].item_real);
-        }
-    }
-    free(items);
-}
 
 /* Check if an object is in a shop. Returns 1 if so, 0 otherwise. */
 int is_in_shop(object *ob) {
